# ds_chess

./: CMakeLists.txt  CMakeSettings.json  board.cpp  board.h  evaluation.h  main.cpp  move.cpp  move.h  move_generator.cpp  move_generator.h  search.h  uci.h
ds_chess/: board.cpp  board.h  evaluation.cpp  evaluation.h  main  main.cpp  move.cpp  move.h  move_generator.cpp  move_generator.h  search.cpp  search.h  string_handling.cpp  string_handling.h  test_ds_chess.sln  test_ds_chess.vcxproj  test_ds_chess.vcxproj.filters  uci.cpp  uci.h
ds_chess/Debug/test_ds_chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  test_ds_chess.lastbuildstate
